# TorchEI

./: .deepsource.toml  .gitignore  404.html  CITATION.cff  CODE_OF_CONDUCT.md  Error-Injection.html  Fault-Model.html  Implemented-Algorithms.html  LICENSE  Model-Protection.html  README-zh.md  README.md  api.html  example.ipynb  index.html  package.json  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: codeql-analysis.yml  doc-deploy.yml  greeting.yml  pypi-publish.yml  pytest-cov.yml  python-test.yml  sync-gitee.yml
assets/css/: 0.styles.2b835673.css
assets/js/: 10.475de746.js  10.d32de943.js  11.827110aa.js  11.8b9d5106.js  12.e5fe4eba.js  12.f8da72d1.js  13.89f8ee33.js  13.9cc360eb.js  14.2dd6b6d4.js  14.3bce7761.js  15.5cdf81cf.js  15.ab2785fc.js  16.848f2d67.js  16.976d3f0e.js  17.509fba33.js  17.74d2b344.js  2.98637424.js  3.bb7ebb65.js  4.490be281.js  5.b06395c2.js  6.3af2c27e.js  7.55c4717d.js  8.4fc8aa3a.js  8.937cac11.js  9.8a330fa9.js  9.9b2f148d.js  app.953d8562.js  app.9ac9b496.js
docs/: Fault-Model.md  api.md  index.md
docs/.vuepress/: config.js
docs/.vuepress/styles/: palette.styl
docs/zh/: Error-Injection.md  Implemented-Algorithms.md  Model-Protection.md  index.md
test/: attack_test.py  protection_test.py  tool_test.py  utils.py
torchei/: __init__.py  fault_model.py  utils.py
zh/: Error-Injection.html  Fault-Model.html  Implemented-Algorithms.html  Model-Protection.html  index.html
