[metadata]
name = torchei
version = 0.0.1
author_email = forcelesszheng@foxmail.com
description = A toolbox about DNN Reliability
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pytorch,reliability,error injection,fault injection,bitflip
url = https://github.com/TorchEI/TorchEI 
project_urls =
    Bug Tracker = https://github.com/TorchEI/TorchEI/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = torchei
python_requires '>=3.6'
install_requires = 
    torch >=1.8.0
    numpy >=1.21.0
    torchstat
    scipy
    tqdm

[options.packages.find]
where = src
packages = find: