[metadata]
name = torchei
version = 0.0.8
# __version__ in __init__.py should be changed also
author_email = forcelesszheng@foxmail.com
description = A toolbox about DNN Reliability
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pytorch,reliability,ErrorInjection,FaultInjection,BitFlip
url = https://github.com/TorchEI/TorchEI 
project_urls =
    Bug Tracker = https://github.com/TorchEI/TorchEI/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

# python -m build --sdist --wheel --no-isolation --outdir dist/ .;python -m twine upload --repository pypi dist/*;rm dist

# git add .;git commit -m '!!!' ;git push

[options]
packages = torchei
python_requires '>=3.6'
install_requires = 
    torch >=1.8.0
    numpy >=1.21.0
    torchstat
    scipy
    tqdm
    torchvision

[options.packages.find]
where = src
packages = find: